Updates to Zipkin 3, Spring Boot 3 and JRE 17 (#209)
This updates server modules to Zipkin 3, Spring Boot 3 and JRE 17. It
leaves the client side modules at Java 8.

In order to compile the server module, we can no longer compile with
JDK 11.

See https://github.com/openzipkin/zipkin/pull/3684

Signed-off-by: Adrian Cole <adrian@tetrate.io>
Co-authored-by: Andriy Redko <drreta@gmail.com>